# xmr

./: .gitignore  Cargo.toml
crypto/: Cargo.toml
crypto/src/: ffi.rs  lib.rs
crypto/sys/: CMakeLists.txt  int-util.h
